--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -3,11 +3,15 @@ body {
     height: 100vh;
 }
 
-img {
+.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 65%;
+}
+
+.cloud {
+    width: 9%;
 }
 
 input[type=text] {
