--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -4,3 +4,10 @@ h2 {
     font-family: LemonMilk;
     color: rgb(252,227,127);
 }
+
+img {
+    width:50vh;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
