--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -1,5 +1,14 @@
 @font-face { font-family: LemonMilk; src: url('../Fonts/LemonMilk.otf'); }
 
+body {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 h2 {
     font-family: LemonMilk;
     color: rgb(252,227,127);
