--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -37,3 +37,17 @@ input[type=text] {
     border-color: rgb(252, 210, 127);
     background-color:rgb(252, 227,127);
 }
+
+.userbutton {
+    padding: 15px 20px 15px 20px;
+    margin-left: 10px;
+    font-size: 16px;
+    font-family: LemonMilk;
+    font-weight: bold;
+    color: black;
+    border-color: rgb(252, 210, 127);
+    background-color:rgb(252, 227,127);
+    position:absolute;
+    left: 0%;
+    top: 5%;
+}
