--- a/src/User/User.css
+++ b/src/User/User.css
@@ -1,1 +1,24 @@
 @font-face { font-family: LemonMilk; src: url('../Fonts/LemonMilk.otf'); } 
+
+.userTitle {
+    font-size: 70px;
+}
+
+.towelcomebutton {
+    padding: 15px 20px 15px 20px;
+    margin-left: 10px;
+    font-size: 16px;
+    font-family: LemonMilk;
+    font-weight: bold;
+    color: black;
+    border-color: rgb(252, 210, 127);
+    background-color:rgb(252, 227,127);
+    position: absolute;
+    left:0%;
+    top:20%;
+}
+
+.jukeboxIcon {
+    height: 15%;
+    width: 15%;
+}
