--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -59,3 +59,17 @@ button {
     border-color: rgb(252, 210, 127);
     background-color:rgb(252, 227,127);
 }
+
+#locationBtn2 {
+    padding: 15px 20px 15px 20px;
+    margin-left: 10px;
+    font-size: 16px;
+    font-family: LemonMilk;
+    font-weight: bold;
+    color: black;
+    border-color: rgb(252, 210, 127);
+    background-color:rgb(252, 227,127);
+    position:absolute;
+    left: 1vw;
+    top: 6vh;
+}
