--- a/src/User/User.css
+++ b/src/User/User.css
@@ -14,8 +14,8 @@
     border-color: rgb(252, 210, 127);
     background-color:rgb(252, 227,127);
     position: absolute;
-    left:0%;
-    top:5%;
+    left: 1vw;
+    top: 6vh;
 }
 
 .jukeboxIcon {
