--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -57,6 +57,6 @@ input[type=text] {
     border-color: rgb(252, 210, 127);
     background-color:rgb(252, 227,127);
     position:absolute;
-    left: 0%;
-    top: 5%;
+    left: 1vw;
+    top: 6vh;
 }
