--- a/src/User/User.css
+++ b/src/User/User.css
@@ -32,4 +32,36 @@ tr {
     font-size: 16px;
     font-family: LemonMilk;
     color: rgb(252, 210, 127);
+    border-top:0px;
+}
+
+th {
+    border-top:0px;
+    border-bottom:0px;
+    font-size:25px;
+}
+
+.table thead th {
+    border-bottom:0px;
+    border-top:0px;
+}
+
+.table td {
+    border-top:0px;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: underline;
 }
