--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -1,7 +1,7 @@
 @font-face { font-family: LemonMilk; src: url('../Fonts/LemonMilk.otf'); }
 
-.Jukebox {
-    margin-top: 15px;
+.deezer-widget-player {
+    margin-top: 40px;
 }
 
 #backgroundImg {
@@ -39,7 +39,18 @@ body {
 h2 {
     font-family: LemonMilk;
     color: rgb(252,227,127);
-    font-size: 3.5vw;
+    font-size: 2vw;
+}
+
+#infoText {
+    background-color:#333;
+    padding: 1px;
+    width: 400px;
+    margin: 0 auto;
+}
+
+#infoText .h2 {
+    float: left;
 }
 
 img {
