--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -77,6 +77,7 @@ button {
     color: black;
     border-color: rgb(252, 210, 127);
     background-color:rgb(252, 227,127);
+    box-shadow: 3px 3px 20px #333;
 }
 
 #jukeButtons {
@@ -97,8 +98,7 @@ button {
 }
 
 #buttonDiv {
-    position:absolute;
-    left: 1vw;
-    top: 6vh;
-    width: 30%;
+    position: relative;
+    top: 20px;
+    width: 150px;
 }
