--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -47,9 +47,9 @@ h2 {
 }
 
 #infoText {
-    background-color:#333;
+    background-color:rgba(51, 51, 51, 0.8);
     padding: 1px;
-    width: 400px;
+    width: 350px;
     margin: 0 auto;
     margin-bottom: 5px;
     box-shadow: 3px 3px 20px #333;
