--- a/src/User_all/User_all.css
+++ b/src/User_all/User_all.css
@@ -89,3 +89,8 @@ a:hover {
 a:active {
     text-decoration: underline;
 }
+
+button:hover {
+    background-color: #f0ad4e;
+    border-color: #f0ad4e;
+}
