--- a/src/User_all/User_all.css
+++ b/src/User_all/User_all.css
@@ -1,7 +1,7 @@
 @font-face { font-family: LemonMilk; src: url('../Fonts/LemonMilk.otf'); } 
 
 .userTitle {
-    font-size: 70px;
+    font-size: 55px;
 }
 
 .towelcomebutton {
@@ -93,4 +93,10 @@ a:active {
 button:hover {
     background-color: #f0ad4e;
     border-color: #f0ad4e;
+}
+
+h1 {
+    font-size: 70px;
+    font-family: LemonMilk;
+    color:rgb(252, 227,127);
 }
