--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -22,7 +22,7 @@ body {
     height: auto
 }
 
-input[type=text] {
+input[id=locationField] {
     width: 20%;
     box-sizing: border-box;
     border: 2px solid #ccc;
