--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -3,13 +3,13 @@
 html, body {
     margin: 0;
     height: 100%;
-    background: rgb(34, 52, 102);
 }
 
 body {
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background: linear-gradient(rgb(0, 2, 71), rgb(34, 52, 102));
+    background: rgb(34, 52, 102);
+    background-image: -webkit-linear-gradient(rgb(0, 2, 71), rgb(34, 52, 102));
 }
 
 .center {
