user_jukebox klar!

--- a/src/User_jukebox/User_jukebox.css
+++ b/src/User_jukebox/User_jukebox.css
@@ -111,3 +111,13 @@ button:hover {
 #hp:hover {
     color: hotpink;
 }
+
+#pink{
+    cursor: pointer;
+    color: hotpink;
+}
+
+#speaker{
+    width:20px;
+    height:auto;
+}
