--- a/src/User_all/User_all.css
+++ b/src/User_all/User_all.css
@@ -4,6 +4,12 @@
     font-size: 55px;
 }
 
+@media only screen and (max-width: 680px) {
+    .thinvisible {
+        display: none;
+    }
+}
+
 .towelcomebutton {
     padding: 15px 20px 15px 20px;
     margin-left: 10px;
