--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -111,15 +111,16 @@ button:hover {
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     color: black;
     display: block;
     transition: 0.3s;
+    font-family: LemonMilk;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: #f0ad4e;
 }
 
 /* Position and style the close button (top right corner) */
@@ -127,8 +128,9 @@ button:hover {
     position: absolute;
     top: 0;
     right: 25px;
-    font-size: 36px;
+    font-size: 35px;
     margin-left: 50px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
