--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -119,3 +119,10 @@ button:hover {
     top: 20px;
     width: 150px;
 }
+
+@media only screen and (max-width: 680px) {
+    #playerscale {
+        zoom: 0.9;
+        -moz-transform: scale(0.9);
+}
+}
