--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -37,8 +37,16 @@ body {
     height: auto
 }
 
+.markerbutton:hover {
+    cursor: pointer;
+}
+
+#locationBtn:hover {
+    cursor: pointer;
+}
+
 input[id=locationField] {
-    width: 90%;
+    width: 40%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -92,4 +100,14 @@ button:hover {
  #buttonCol {
      padding: 5px;
  }
+
+ @media only screen and (max-width: 680px) {
+    input[id=locationField] {
+        width: 80%;
+    }
+    .markerbutton {
+        margin-top: 10px;
+    }
+}
+
  
