--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -2,7 +2,14 @@
 
 html, body {
     margin: 0;
-    height: 102%;
+    height: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    html, body {
+        margin: 0;
+        height: 102%;
+    }
 }
 
 body {
